change icon, fix bug with container overflow

--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
+    overflow: hidden;
 
     .above-title {
       display: flex;
